# pattern-typestate

./: Cargo.toml  LICENSE.txt  README.md  rustfmt.toml
media/: pattern-typestate.drawio
src/: lib.rs  main.rs
src/constructor_0/: armor.rs  mod.rs  test.rs  wizard_weapon.rs
src/example0/: event.rs  mod.rs  state_data_a.rs  state_data_b.rs  state_data_c.rs  state_data_d.rs  state_data_e.rs  state_operator.rs  test.rs  type_state.rs  typestate.rs
src/example1/: mod.rs  running.rs  test.rs  uninitialized.rs
src/example2/: ejected.rs  mod.rs  running.rs  stopped.rs  test.rs  typestate.rs
src/example3/: mod.rs  test.rs
src/example4/: ejected.rs  mod.rs  running.rs  state_operator.rs  state_trait.rs  stopped.rs  test.rs  typestate.rs
src/fluent_constructor_0/: armor.rs  character_class.rs  constructor_creator.rs  mod.rs  spell.rs  test.rs  weapon.rs  wizard_weapon.rs
src/fluent_constructor_1/: mod.rs  test.rs
src/fluent_constructor_2/: constructor.rs  mod.rs  test.rs  widget.rs
src/fluent_constructor_3/: character_class.rs  constructor.rs  mod.rs
src/state_machine_0/: test.rs
src/state_machine_1/: ejected.rs  mod.rs  running.rs  state_operator.rs  state_trait.rs  stopped.rs  test.rs
src/state_machine_2/: data.rs  ejected.rs  event.rs  mod.rs  player.rs  request.rs  running.rs  state_operator.rs  state_trait.rs  stopped.rs  test.rs  typestate.rs
src/strict_builder/: mod.rs
src/strict_builder_0/: mod.rs
src/strict_builder_1/: armor.rs  character_class.rs  mod.rs  spell.rs  weapon.rs  wizard_weapon.rs
src/typestate_0/: mod.rs  state_data_b.rs  (+2 more)
(+85 files in other folders)
