[package]
authors = ["David Wallace Croft <david@CroftSoft.com"]
description = "Example code demonstrating the pattern Typestate"
edition = "2021"
homepage = "https://www.CroftSoft.com/"
license = "MIT"
name = "pattern-typestate"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/pattern-typestate"
version = "0.1.0"

[dependencies]
# none
